# Clouddrive-Fedora

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  com.fiberelements.Clouddrive.yml  io.github.sha5b.Clouddrive.yml  io.github.sha5b.Cloudy.yml  meson.build  meson.options  requirements.txt
.github/workflows/: release.yml
data/: cloudy.gschema.override.in  com.fiberelements.Clouddrive.desktop.in  com.fiberelements.Clouddrive.gresource.xml  com.fiberelements.Clouddrive.gschema.xml  com.fiberelements.Clouddrive.metainfo.xml.in  com.fiberelements.Cloudy.desktop.in  com.fiberelements.Cloudy.gschema.xml  io.github.sha5b.Clouddrive.desktop.in  io.github.sha5b.Clouddrive.gschema.xml  io.github.sha5b.Clouddrive.service.in  io.github.sha5b.Cloudy.gresource.xml  io.github.sha5b.Cloudy.gschema.xml  io.github.sha5b.Cloudy.metainfo.xml.in  meson.build  style.css
data/icons/: meson.build
data/ui/: preferences.blp  window.blp
docs/: ARCHITECTURE.md  AUTH.md  BUILDING.md  HANDOFF.md  MODULES.md  RESEARCH.md  ROADMAP.md  SECRETS.md  index.html  privacy.html  terms.html
docs/assets/: site.css
nautilus-extension/: README.md  clouddrive_nautilus.py  cloudy_nautilus.py
packaging/: cloudy.spec
po/: LINGUAS  POTFILES.in  meson.build
scripts/: bootstrap-fedora.sh  flatpak-local-manifest.py  uninstall-cloudy.sh
src/: clouddrive.in  cloudy.in  meson.build
src/clouddrive/: __init__.py  application.py  main.py  preferences.py  window.py
src/clouddrive/core/: account_registry.py  dbus_service.py  interfaces.py  plugin_engine.py  secrets.py
src/clouddrive/core/auth/: google_oauth.py  msal_graph.py
src/clouddrive/modules/gmail/: __init__.py
src/clouddrive/modules/graph_mail/: __init__.py
src/clouddrive/modules/microsoft365/: files.py  graph.py  module.py  mounts.py
src/clouddrive/modules/onedrive/: __init__.py  module.py
src/clouddrive/widgets/: dashboard_view.py  files_view.py
src/cloudy/: __init__.py  account_dialog.py  application.py  main.py  preferences.py  window.py
src/cloudy/core/: __init__.py  account_registry.py  cache.py  credentials.py  dbus_service.py  eds_publish.py  gi_compat.py  ics.py  interfaces.py  notifications.py  plugin_engine.py  provisioner.py  secrets.py  sync.py
src/cloudy/core/auth/: __init__.py  google_oauth.py  msal_graph.py
src/cloudy/modules/: __init__.py
src/cloudy/modules/gmail/: __init__.py  google_client.py
src/cloudy/modules/microsoft365/: __init__.py  abraunegg.py  files.py  graph.py  module.py  mounts.py
src/cloudy/widgets/: __init__.py  activity_view.py  attachments.py  calendar_view.py  chat_compose.py  chat_view.py  clients.py  command_palette.py  compose_view.py  dashboard_view.py  editor_window.py  event_compose.py  event_view.py  event_window.py  file_browser.py  files_view.py  format.py  graph_helper.py  imaging.py  mail_view.py  media_window.py  message_view.py  message_window.py  month_grid.py  rich_editor.py  source_nav.py  teams_view.py
subprojects/: blueprint-compiler.wrap
tests/unit/: gi_setup.py  test_graph.py  test_source_nav.py
