# SPDX-License-Identifier: GPL-3.0-or-later
# SPDX-FileCopyrightText: 2026 Fiber Elements

scalable_dir = 'hicolor' / 'scalable' / 'apps'
install_data(
  scalable_dir / '@0@.svg'.format(application_id),
  install_dir: datadir / 'icons' / scalable_dir,
)

symbolic_dir = 'hicolor' / 'symbolic' / 'apps'
install_data(
  symbolic_dir / '@0@-symbolic.svg'.format(application_id),
  install_dir: datadir / 'icons' / symbolic_dir,
)
